jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-server
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app: jellyfin
