jellyfin/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
    - hosts:
        - jellyfin.toastedbuns.co.uk
      secretName: jellyfin-prod-tls
  rules:
    - host: jellyfin.toastedbuns.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: jellyfin-server
              servicePort: 8096
